# ffrog

./: CMakeLists.txt  Makefile  README.md
src/: MainWindow.cpp  MainWindow.h  UDisks2.cpp  UDisks2.h  main.cpp
